...
                        onClick = { navController.navigate(AppNavigation.AGREGAR_CITA) },
                        containerColor = colorAzulBotones,
                        contentColor = Color.White,
                        shape = CircleShape,
                        modifier = Modifier.size(45.dp) //tamaño
                    ) {
                        Icon(Icons.Default.Add, contentDescription = "Agregar Cita")
                    }
                }
            }
        },
        floatingActionButtonPosition = if (modoSeleccionActivo) FabPosition.End else FabPosition.Center,
    ) { paddingValues ->
...
            Column(modifier = Modifier.padding(horizontal = 16.dp)) {
                Spacer(modifier = Modifier.height(16.dp))

                OutlinedTextField(
                    value = busqueda,
                    onValueChange = { busqueda = it },
                    placeholder = { Text("Nombre, fecha o servicio...", color = Color.Gray) },
                    modifier = Modifier.fillMaxWidth().height(56.dp),
                    shape = RoundedCornerShape(28.dp),
                    leadingIcon = { Icon(Icons.Default.Search, contentDescription = null, tint = colorAzulBotones) },
                    colors = OutlinedTextFieldDefaults.colors(
                        focusedContainerColor = Color.White,
                        unfocusedContainerColor = Color.White,
...
